5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1577_1330.log
== TEST (2019-03-14 19:14:54) 
-- CODE:
print(round(250/6, 2)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:15:02) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:06) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.164409
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
